# inductor_benchmark

./: .gitignore  CLAUDE.md  pyproject.toml
skills/: benchmark design.md  benchmark notes.md  benchmark pitfalls guide.md  benchmark software design.md
src/benchmark/: compare.py  model_loader.py  run_benchmark.py  worker.py
src/inductor_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model_download/: download_hf_model.py
tests/: test_benchmark_compare.py  test_benchmark_run.py  test_download_hf_model.py
zztemp/: TODO.md
