[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inductor-benchmark"
version = "0.1.0"
description = "Local model download and benchmarking utilities"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.23",
    "torch>=2.4",
    "transformers>=4.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
